remove google sheet functionality, fix overlap of autocomplete box

--- a/src/stylesheets/screen.scss
+++ b/src/stylesheets/screen.scss
@@ -2286,6 +2286,7 @@ input[type="radio"] {
   transition: left 0.1s ease-in-out;
   overflow-y: scroll;
   max-height: 300px;
+  z-index: 2;
 }
 
 .ui-menu-item {
